--- a/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="24dp"
         android:textStyle="bold"
-        android:textSize="36sp"/>
+        android:textSize="32sp"/>
 
     <TextView
         android:layout_marginLeft="24dp"
@@ -74,6 +74,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/add_favorite_button"
         android:text="Add"
+        android:textStyle="bold"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_margin="16dp"
