--- a/app/src/main/res/layout/movie_favorite_layout.xml
+++ b/app/src/main/res/layout/movie_favorite_layout.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="16dp">
+    android:layout_margin="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
+        android:background="#1f2330"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/poster_imageview"
             android:layout_width="160dp"
-            android:layout_height="240dp"
+            android:layout_height="80dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,15 +23,37 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
+            android:textColor="@color/white"
             android:id="@+id/title_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintStart_toEndOf="@+id/poster_imageview"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="End Game" />
+
+        <TextView
+            android:textColor="@color/white"
+            android:id="@+id/runtime_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintStart_toEndOf="@+id/poster_imageview"
+            app:layout_constraintTop_toBottomOf="@id/title_textview"
+            tools:text="3h 4m" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/delete_favorite_button"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/delete_button"
+            android:text=" "
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="End Game" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
