--- a/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -20,7 +20,7 @@
         android:id="@+id/movie_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="End Game"
+        android:text="@string/end_game_tv"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:text="2019"
+        android:text="@string/endgame_release_year"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/movie_title_tv" />
 
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:text="3h 10m"
+        android:text="@string/endgame_runtime"
         app:layout_constraintStart_toEndOf="@id/first_dot"
         app:layout_constraintTop_toBottomOf="@id/movie_title_tv" />
 
@@ -73,7 +73,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/add_favorite_button"
-        android:text="Add"
+        android:text="@string/add_fav_button"
         android:textStyle="bold"
         android:layout_width="80dp"
         android:layout_height="80dp"
