--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:numStars="5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf=""
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/release_year_textview" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
