--- a/app/src/main/res/layout/display_movies_fragment.xml
+++ b/app/src/main/res/layout/display_movies_fragment.xml
@@ -10,14 +10,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/movie_item_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
