--- a/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,13 +20,15 @@
         android:id="@+id/movie_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:layout_marginTop="665dp"
         android:text="@string/end_game_tv"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="24dp"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:textSize="32sp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
         android:layout_marginLeft="24dp"
@@ -73,12 +75,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/add_favorite_button"
-        android:text="@string/add_fav_button"
-        android:textStyle="bold"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_margin="16dp"
         android:background="@drawable/favorite_button"
+        android:text="@string/add_fav_button"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/synopsis_tv" />
