--- a/app/src/main/res/layout/display_movies_fragment.xml
+++ b/app/src/main/res/layout/display_movies_fragment.xml
@@ -5,18 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="#1f2330">
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_marginTop="8dp"
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/logo_transparent"/>
+
+    <TextView
+        android:id="@+id/hit_movies_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="32dp"
+        android:text="Hit Movies"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_recyclerview"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/movie_item_layout" />
+        app:layout_constraintTop_toBottomOf="@id/hit_movies_tv"
+        tools:listitem="@layout/movie_sorted_item_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
