--- a/app/src/main/res/layout/movie_favorite_layout.xml
+++ b/app/src/main/res/layout/movie_favorite_layout.xml
@@ -50,7 +50,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/delete_button"
-            android:text="@string/blank_space_text"
+            android:text=" "
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
